- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    5.2.1, 5.5.0 RC
- 
    None
- 
        9d0e702b1f29c8120f2000e1558a7b040311d8c0
The following example produces errors when the model is removed (click anywhere to remove):
import QtQuick 2.0 Item { width: 400 height: 400 Row { anchors.bottom: parent.bottom anchors.horizontalCenter: parent.horizontalCenter spacing: 2 Repeater { id: repeater model: 10 Rectangle { color: "green" width: 10; height: 50 anchors.bottom: parent.bottom } } } MouseArea { anchors.fill: parent onClicked: repeater.model = 0 } }
The error message is:
QmlTesting.qml:18: TypeError: Cannot read property of null
| For Gerrit Dashboard: QTBUG-46828 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 115078,3 | Prevent errors when removing items from Repeater that reference parent. | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |